make a start for registering customer

--- a/src/WebApp/Views/DIYManagement/Details.cshtml
+++ b/src/WebApp/Views/DIYManagement/Details.cshtml
@@ -1,6 +1,5 @@
-﻿namespace Pitstop.WebApp.Views.DIYManagement
-{
-    public class Details
-    {
-    }
+﻿@model Pitstop.WebApp.ViewModels.DIYManagementDetailsViewModel
+@{
+    ViewData["Title"] = "DIY Details";
 }
+<a id="RegisterCustomerButton" asp-action="New" asp-controller="DIYManagement" class="btn btn-default">Register customer</a>
