WIP Maintenance History frontend

--- a/src/WebApp/Views/VehicleManagement/Index.cshtml
+++ b/src/WebApp/Views/VehicleManagement/Index.cshtml
@@ -6,11 +6,12 @@
 
 <table class="table">
     <thead>
-        <tr>
-            <th>License No.</th>
-            <th>Brand</th>
-            <th>Type</th>
-        </tr>
+    <tr>
+        <th>License No.</th>
+        <th>Brand</th>
+        <th>Type</th>
+        <th>History</th>
+    </tr>
     </thead>
     <tbody>
         @foreach (var vehicle in Model.Vehicles)
@@ -19,9 +20,15 @@
                 <td>@vehicle.LicenseNumber</td>
                 <td>@vehicle.Brand</td>
                 <td>@vehicle.Type</td>
+                <td>
+                    <a class="btn btn-primary" href="@Url.Action("Index", "MaintenanceHistory", new { licenseNumber = vehicle.LicenseNumber })" onclick="event.stopPropagation();">
+                        History
+                    </a>
+                </td>
             </tr>
         }
-    </tbody>
+        
+        </tbody>
 </table>
 <a id="RegisterVehicleButton" asp-action="New" asp-controller="VehicleManagement" class="btn btn-default">Register vehicle</a>
 
