setup for aanmelden diy avond

--- a/src/WebApp/Views/DIYManagement/Details.cshtml
+++ b/src/WebApp/Views/DIYManagement/Details.cshtml
@@ -2,4 +2,4 @@
 @{
     ViewData["Title"] = "DIY Details";
 }
-<a id="RegisterCustomerButton" asp-action="New" asp-controller="DIYManagement" class="btn btn-default">Register customer</a>
+<a id="RegisterCustomerButton" asp-action="NewRegistration" asp-controller="DIYManagement" class="btn btn-default">Register customer</a>
