--- a/src/WebApp/Views/DIYManagement/NewRegistration.cshtml
+++ b/src/WebApp/Views/DIYManagement/NewRegistration.cshtml
@@ -2,3 +2,24 @@
 @{
     ViewData["Title"] = "DIY Register Customer";
 }
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
+<h3 id="PageTitle">DIY Management - register customer</h3>
+
+<form asp-controller="DIYManagement" asp-action="RegisterCustomer" method="post">
+    <div class="form-group">
+        <label asp-for="DIYRegistration.CustomerName"></label>
+        <input asp-for="DIYRegistration.CustomerName" type="text" class="form-control" />
+        <span asp-validation-for="DIYRegistration.CustomerName" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="DIYRegistration.ReparationType"></label>
+        <input asp-for="DIYRegistration.ReparationType" type="text" class="form-control" />
+        <span asp-validation-for="DIYRegistration.ReparationType" class="text-danger"></span>
+    </div>
+    <span><button id="SubmitButton" type="submit" class="btn btn-default">Register</button></span>
+    <span><a id="CancelButton" asp-action="Index" asp-controller="DIYManagement" class="btn btn-default">Cancel</a></span>
+</form>
