--- a/src/WebApp/Views/Shared/_Layout.cshtml
+++ b/src/WebApp/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                     <li><a id="MainMenu.CustomerManagement" asp-area="" asp-controller="CustomerManagement" asp-action="Index">Customer Management</a></li>
                     <li><a id="MainMenu.VehicleManagement" asp-area="" asp-controller="VehicleManagement" asp-action="Index">Vehicle Management</a></li>
                     <li><a id="MainMenu.WorkshopManagement" asp-area="" asp-controller="WorkshopManagement" asp-action="Index">Workshop Management</a></li>
+                    <li><a id="MainMenu.ReviewManagement" asp-area="" asp-controller="ReviewManagement" asp-action="Index">Review Management</a></li>
                     <li><a id="MainMenu.About" asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                 </ul>
             </div>
