--- a/src/WebApp/Views/Shared/_Layout.cshtml
+++ b/src/WebApp/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                     <li><a id="MainMenu.VehicleManagement" asp-area="" asp-controller="VehicleManagement" asp-action="Index">Vehicle Management</a></li>
                     <li><a id="MainMenu.WorkshopManagement" asp-area="" asp-controller="WorkshopManagement" asp-action="Index">Workshop Management</a></li>
                     <li><a id="MainMenu.RentalManagement" asp-area="" asp-controller="RentalManagement" asp-action="Index">Rental management</a></li>
+                    <li><a id="MainMenu.RentalCarManagement" asp-area="" asp-controller="RentalCarManagement" asp-action="Index">Rental Car management</a></li>
                     <li><a id="MainMenu.About" asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                 </ul>
             </div>
