fix build errors

--- a/src/WebApp/Views/DIYManagement/NewRegistration.cshtml
+++ b/src/WebApp/Views/DIYManagement/NewRegistration.cshtml
@@ -16,9 +16,9 @@
         <span asp-validation-for="DIYRegistration.CustomerName" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="DIYRegistration.ReparationType"></label>
-        <input asp-for="DIYRegistration.ReparationType" type="text" class="form-control" />
-        <span asp-validation-for="DIYRegistration.ReparationType" class="text-danger"></span>
+        <label asp-for="DIYRegistration.Reparations"></label>
+        <input asp-for="DIYRegistration.Reparations" type="text" class="form-control" />
+        <span asp-validation-for="DIYRegistration.Reparations" class="text-danger"></span>
     </div>
     <span><button id="SubmitButton" type="submit" class="btn btn-default">Register</button></span>
     <span><a id="CancelButton" asp-action="Index" asp-controller="DIYManagement" class="btn btn-default">Cancel</a></span>
