--- a/src/WebApp/Views/ReviewManagement/New.cshtml
+++ b/src/WebApp/Views/ReviewManagement/New.cshtml
@@ -1,4 +1,4 @@
-﻿@model Pitstop.WebApp.ViewModels.CustomerManagementNewViewModel
+﻿@model Pitstop.WebApp.ViewModels.ReviewManagementNewViewModel
 @{
     ViewData["Title"] = "New Review";
 }
@@ -7,10 +7,14 @@
 <h3 id="PageTitle">Review Management - new review</h3>
 
 <form asp-controller="ReviewManagement" asp-action="New" method="post">
-        <input value="@(Model.CustomerId)" asp-for="customerId" type="hidden" class="form-control" />
-
     <div class="form-group">
-        <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+        <label asp-for="SelectedCustomerId"></label>
+        <select asp-for="SelectedCustomerId" asp-items="Model.Customers" class="form-control"></select>
+        <span asp-validation-for="SelectedCustomerId" class="text-danger"></span>
+    </div>
+    
+    <div class="form-group">
+        <select asp-for="Stars" class="form-select" id="floatingSelect" aria-label="Floating label select example">
             <option selected>Open this select menu</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -19,6 +23,7 @@
             <option value="5">5</option>
         </select>
         <label for="floatingSelect">Rate Pitstop from 1 to 5 stars</label>
+        <span asp-validation-for="Stars" class="text-danger"></span>
     </div>
     
     <span><button id="SubmitButton" type="submit" class="btn btn-default">New Review</button></span>
