Frontend detail view of history
#26

--- a/src/WebApp/Views/MaintenanceHistory/Details.cshtml
+++ b/src/WebApp/Views/MaintenanceHistory/Details.cshtml
@@ -5,4 +5,11 @@
 
 <h3 id="PageTitle">@Model.LicenseNumber -- @Model.MaintenanceDate</h3>
 
+<h4>Description</h4>
 <p>@Model.Description</p>
+
+<h4>Type of maintenance</h4>
+<p>@Model.MaintenanceType</p>
+
+<h4>Is the maintenance complete?</h4>
+<p>@Model.IsCompleted</p>
