--- a/src/WebApp/Views/DIYManagement/New.cshtml
+++ b/src/WebApp/Views/DIYManagement/New.cshtml
@@ -1,6 +1,44 @@
-﻿namespace Pitstop.WebApp.Views.DIYManagement
-{
-    public class New
-    {
+﻿@model Pitstop.WebApp.ViewModels.DIYNewViewModel
+@{
+    ViewData["Title"] = "DIY";
+}
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+
+<h3 id="PageTitle">DIY - register Evening</h3>
+
+<form asp-controller="DIYManagement" asp-action="CreateDIYEvening" method="post">
+    <div class="form-group">
+        <label asp-for="DIYEvening.Title"></label>
+        <input asp-for="DIYEvening.Title" type="text" class="form-control" />
+        <span asp-validation-for="DIYEvening.Title" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="DIYEvening.ExtraInfo"></label>
+        <input asp-for="DIYEvening.ExtraInfo" type="text" class="form-control" />
+        <span asp-validation-for="DIYEvening.ExtraInfo" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="DIYEvening.StartDate"></label>
+        <input asp-for="DIYEvening.StartDate" type="datetime-local" min="@DateTime.Now.ToString("yyyy-MM-ddTHH:mm")" class="form-control" />
+        <span asp-validation-for="DIYEvening.StartDate" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="DIYEvening.EndDate"></label>
+        <input asp-for="DIYEvening.EndDate" type="datetime-local" min="@DateTime.Now.ToString("yyyy-MM-ddTHH:mm")" class="form-control" />
+        <span asp-validation-for="DIYEvening.EndDate" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="DIYEvening.Mechanic"></label>
+        <input asp-for="DIYEvening.Mechanic" tyDIYNEvening class="form-control" />
+        <span asp-validation-for="DIYEvening.Mechanic" class="text-danger"></span>
+    </div>
+
+    <span><button id="SubmitButton" type="submit" class="btn btn-default">Plan evening</button></span>
+    <span><a id="CancelButton" asp-action="Index" asp-controller="DIYManagement" class="btn btn-default">Cancel</a></span>
+</form>
