--- a/src/WebApp/Views/VehicleManagement/Index.cshtml
+++ b/src/WebApp/Views/VehicleManagement/Index.cshtml
@@ -28,10 +28,16 @@
                         </a>
                     </td>
                 }
+                else 
+                {
+                    <td>
+                        <a class="btn btn-primary">
+                            No history available
+                        </a>
+                    </td>
+                }
             </tr>
         }
     </tbody>
 </table>
 <a id="RegisterVehicleButton" asp-action="New" asp-controller="VehicleManagement" class="btn btn-default">Register vehicle</a>
-
-
