--- a/src/WebApp/Views/DIYManagement/NewRegistration.cshtml
+++ b/src/WebApp/Views/DIYManagement/NewRegistration.cshtml
@@ -10,6 +10,7 @@
 <h3 id="PageTitle">DIY Management - register customer</h3>
 
 <form asp-controller="DIYManagement" asp-action="RegisterCustomer" method="post">
+    <input asp-for="DIYRegistration.DIYEveningId" type="hidden" />
     <div class="form-group">
         <label asp-for="DIYRegistration.CustomerName"></label>
         <input asp-for="DIYRegistration.CustomerName" type="text" class="form-control" />
@@ -21,5 +22,6 @@
         <span asp-validation-for="DIYRegistration.Reparations" class="text-danger"></span>
     </div>
     <span><button id="SubmitButton" type="submit" class="btn btn-default">Register</button></span>
-    <span><a id="CancelButton" asp-action="Index" asp-controller="DIYManagement" class="btn btn-default">Cancel</a></span>
+    <span><a id="CancelButton" asp-action="Index" asp-controller="DIYManagement"
+            class="btn btn-default">Cancel</a></span>
 </form>
