--- a/src/WebApp/Views/DIYManagement/Index.cshtml
+++ b/src/WebApp/Views/DIYManagement/Index.cshtml
@@ -11,6 +11,7 @@
             <th>DIY Description</th>
             <th>Start Date & time</th>
             <th>End Date & time</th>
+            <th>Cancelled</th>
         </tr>
     </thead>
     <tbody>
@@ -21,6 +22,10 @@
                 <td>@diy.ExtraInfo</td>
                 <td>@diy.StartDate</td>
                 <td>@diy.EndDate</td>
+                <td>@if (diy.Cancelled)
+                {
+                    <span class="glyphicon glyphicon-remove" style="color:red"></span>
+                }</td>
             </tr>
         }
     </tbody>
