--- a/src/WebApp/Views/DIYManagement/Index.cshtml
+++ b/src/WebApp/Views/DIYManagement/Index.cshtml
@@ -26,3 +26,4 @@
     </tbody>
 </table>
 <a id="CreateDIYEveningButton" asp-action="New" asp-controller="DIYManagement" class="btn btn-default">Register DIYEvening</a>
+<a id="CreateDIYFeedbackButton" asp-action="NewFeedback" asp-controller="DIYManagement" class="btn btn-default">Give feedback</a>
