--- a/src/WebApp/Views/DIYManagement/Details.cshtml
+++ b/src/WebApp/Views/DIYManagement/Details.cshtml
@@ -29,4 +29,5 @@
 </table>
 <a id="RegisterCustomerButton" asp-action="NewRegistration" asp-route-diyAvondId="@Model.DIYAvond.Id"
     asp-controller="DIYManagement" class="btn btn-default">Register customer</a>
+<a id="CreateDIYFeedbackButton" asp-action="NewFeedback" asp-controller="DIYManagement" class="btn btn-default">Give feedback</a>
 <a id="CancelButton" asp-action="Index" asp-controller="DIYManagement" class="btn btn-default">Cancel</a>
