--- a/src/WebApp/Views/DIYManagement/NewFeedback.cshtml
+++ b/src/WebApp/Views/DIYManagement/NewFeedback.cshtml
@@ -10,7 +10,7 @@
 <h3 id="PageTitle">DIY Management - new feedback</h3>
 
 <form asp-controller="DIYManagement" asp-action="RegisterFeedback" method="post">
-    <input asp-for="DIYRegistration.DIYEveningId" type="hidden" />
+    <input asp-for="DIYFeedback.DIYEveningId" type="hidden" />
     <div class="form-group">
         <label asp-for="DIYFeedback.CustomerName"></label>
         <input asp-for="DIYFeedback.CustomerName" type="text" class="form-control" />
