--- a/src/WebApp/Views/DIYManagement/NewFeedback.cshtml
+++ b/src/WebApp/Views/DIYManagement/NewFeedback.cshtml
@@ -1,3 +1,4 @@
+
 @model Pitstop.WebApp.ViewModels.DIYManagementNewFeedbackViewModel
 @{
     ViewData["Title"] = "DIY Feedback";
@@ -10,7 +11,7 @@
 <h3 id="PageTitle">DIY Management - new feedback</h3>
 
 <form asp-controller="DIYManagement" asp-action="RegisterFeedback" method="post">
-    <input asp-for="DIYFeedback.DIYEveningId" type="hidden" />
+    <input asp-for="DIYFeedback.DIYEveningId" />
     <div class="form-group">
         <label asp-for="DIYFeedback.CustomerName"></label>
         <input asp-for="DIYFeedback.CustomerName" type="text" class="form-control" />
