--- a/src/WebApp/Views/DIYManagement/Details.cshtml
+++ b/src/WebApp/Views/DIYManagement/Details.cshtml
@@ -39,8 +39,7 @@
 
 @if (Model.DIYEvening.StartDate < DateTime.Now)
 {
-    <br>
-    <h6> Given Feedback: </h6>
+    <h4 style="margin-top: 50px;"> Given Feedback: </h4>
     <table class="table">
         <thead>
             <tr>
