--- a/src/WebApp/Views/DIYManagement/Details.cshtml
+++ b/src/WebApp/Views/DIYManagement/Details.cshtml
@@ -46,4 +46,10 @@
 </table>
 <a id="RegisterCustomerButton" asp-action="NewRegistration" asp-route-DIYEveningId="@Model.DIYEvening.Id"
     asp-controller="DIYManagement" class="btn btn-default">Register customer</a>
+
+@if (Model.DIYEvening.StartDate < DateTime.Now)
+{
+    <a id="RegisterDIYFeedbackButton" asp-action="NewFeedback" asp-route-diyEveningId="@Model.DIYEvening.Id" asp-controller="DIYManagement" class="btn btn-default">Give feedback</a>
+}
+
 <a id="CancelButton" asp-action="Index" asp-controller="DIYManagement" class="btn btn-default">Cancel</a>
