Show first entry of maintenanceHistory as detailed
#1

--- a/src/WebApp/Views/MaintenanceHistory/Details.cshtml
+++ b/src/WebApp/Views/MaintenanceHistory/Details.cshtml
@@ -12,4 +12,4 @@
 <p>@Model.MaintenanceType</p>
 
 <h4>Is the maintenance complete?</h4>
-<p>@Model.IsCompleted</p>
+<p>@(Model.IsCompleted ? "Yes" : "No")</p>
