Review comment toevoegen

--- a/src/WebApp/Views/ReviewManagement/Index.cshtml
+++ b/src/WebApp/Views/ReviewManagement/Index.cshtml
@@ -8,6 +8,7 @@
     <thead>
     <tr>
         <th>Stars</th>
+        <th>Review comment</th>
         <th>Reviewer</th>
     </tr>
     </thead>
@@ -24,6 +25,7 @@
         {
             <tr>
                 <td>@review.Rating</td>
+                <td>@review.Content</td>
                 <td>@review.ReviewerName</td>
             </tr>
         }
