--- a/src/WebApp/Views/ReviewManagement/New.cshtml
+++ b/src/WebApp/Views/ReviewManagement/New.cshtml
@@ -26,6 +26,12 @@
         <span asp-validation-for="Stars" class="text-danger"></span>
     </div>
     
+    <div class="form-group">
+        <label asp-for="ReviewComment">Review Comment</label>
+        <textarea asp-for="ReviewComment" class="form-control" rows="4" placeholder="Provide your comments here..."></textarea>
+        <span asp-validation-for="ReviewComment" class="text-danger"></span>
+    </div>
+    
     <span><button id="SubmitButton" type="submit" class="btn btn-default">Submit</button></span>
     <span><a id="CancelButton" asp-action="Index" asp-controller="ReviewManagement" class="btn btn-default">Cancel</a></span>
 </form>
