create customeroverview page (#73)

--- a/src/WebApp/Views/DIYManagement/CustomerOverview.cshtml
+++ b/src/WebApp/Views/DIYManagement/CustomerOverview.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Pitstop.WebApp.ViewModels.DIYManagementViewModel
 @{
-    ViewData["Title"] = "DIY Overview";
+    ViewData["Title"] = "DIY Customer Overview";
 }
-<h3 id="PageTitle">DIY Management - overview</h3>
 
+<h3 id="PageTitle">DIY Customer- overview</h3>
 <table class="table">
     <thead>
         <tr>
@@ -22,18 +22,17 @@
                 <td>@diy.ExtraInfo</td>
                 <td>@diy.StartDate</td>
                 <td>@diy.EndDate</td>
-                <td>@if (diy.Cancelled)
-                {
-                    <span class="glyphicon glyphicon-remove" style="color:red"></span>
-                }
-                else
-                {
-                    <span class="glyphicon glyphicon-ok" style="color:green"></span>
-                }
+                <td>
+                    @if (diy.Cancelled)
+                    {
+                        <span class="glyphicon glyphicon-remove" style="color:red"></span>
+                    }
+                    else
+                    {
+                        <span class="glyphicon glyphicon-ok" style="color:green"></span>
+                    }
                 </td>
             </tr>
         }
     </tbody>
 </table>
-<a id="CreateDIYEveningButton" asp-action="New" asp-controller="DIYManagement" class="btn btn-default">Register DIYEvening</a>
-<a id="NavigateToCustomerOverviewButton" asp-action="CustomerOverview" asp-controller="DIYManagement" class="btn btn-default">Customer overview</a>
