--- a/src/WebApp/Views/ReviewManagement/Index.cshtml
+++ b/src/WebApp/Views/ReviewManagement/Index.cshtml
@@ -10,6 +10,7 @@
         <th>Stars</th>
         <th>Review comment</th>
         <th>Reviewer</th>
+        <th>Actions</th>
     </tr>
     </thead>
     <tbody>
@@ -27,6 +28,9 @@
                 <td>@review.Rating</td>
                 <td>@review.Content</td>
                 <td>@review.ReviewerName</td>
+                <td>
+                    <button asp-action="Delete" asp-controller="ReviewManagement" asp-route-id="@review.Id" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this review?');">Delete</button>
+                </td>
             </tr>
         }
     }
