--- a/src/WebApp/Views/DIYManagement/CustomerOverview.cshtml
+++ b/src/WebApp/Views/DIYManagement/CustomerOverview.cshtml
@@ -1,4 +1,4 @@
-﻿@model Pitstop.WebApp.ViewModels.DIYManagementViewModel
+﻿@model Pitstop.WebApp.ViewModels.DIYManagementCustomerOverviewViewModel
 @{
     ViewData["Title"] = "DIY Customer Overview";
 }
