Rental car werkend

--- a/src/WebApp/Views/RentalManagement/New.cshtml
+++ b/src/WebApp/Views/RentalManagement/New.cshtml
@@ -29,9 +29,9 @@
         <span asp-validation-for="EndDate" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="SelectedRentalCarLicenseNumber"></label>
-        <select asp-for="SelectedRentalCarLicenseNumber" asp-items="Model.RentalCars" class="form-control"></select>
-        <span asp-validation-for="SelectedRentalCarLicenseNumber" class="text-danger"></span>
+        <label asp-for="SelectedRentalCarId"></label>
+        <select asp-for="SelectedRentalCarId" asp-items="Model.RentalCars" class="form-control"></select>
+        <span asp-validation-for="SelectedRentalCarId" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="SelectedCustomerId"></label>
