--- a/src/WebApp/Views/RentalManagement/Index.cshtml
+++ b/src/WebApp/Views/RentalManagement/Index.cshtml
@@ -18,7 +18,7 @@
     @foreach (var rental in Model.Rentals)
     {
     <tr>
-        <td>@rental.RentalCar.LicenseNumber</td>
+        <td>@rental.Car.LicenseNumber</td>
         <td>@rental.Customer.Name</td>
         <td>@rental.StartDate</td>
         <td>@rental.EndDate</td>
