--- a/src/WebApp/Views/ReviewManagement/Index.cshtml
+++ b/src/WebApp/Views/ReviewManagement/Index.cshtml
@@ -29,7 +29,7 @@
                 <td>@review.Content</td>
                 <td>@review.ReviewerName</td>
                 <td>
-                    <button asp-action="Delete" asp-controller="ReviewManagement" asp-route-id="@review.Id" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this review?');">Delete</button>
+                    @* <button asp-action="Delete" asp-controller="ReviewManagement" asp-route-id="@review.Id" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this review?');">Delete</button> *@
                 </td>
             </tr>
         }
