--- a/src/WebApp/Views/ReviewManagement/Index.cshtml
+++ b/src/WebApp/Views/ReviewManagement/Index.cshtml
@@ -29,6 +29,10 @@
                 <td>@review.Content</td>
                 <td>@review.ReviewerName</td>
                 <td>
+                    <form asp-action="Delete" asp-controller="ReviewManagement" asp-route-id="@review.Id" method="post" onsubmit="return confirm('Are you sure you want to delete this review?');">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <input type="hidden" name="_method" value="DELETE" />
+                    </form>
                     @* <button asp-action="Delete" asp-controller="ReviewManagement" asp-route-id="@review.Id" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this review?');">Delete</button> *@
                 </td>
             </tr>
