Update car & end date

--- a/src/WebApp/Views/RentalManagement/Index.cshtml
+++ b/src/WebApp/Views/RentalManagement/Index.cshtml
@@ -17,7 +17,7 @@
     <tbody>
     @foreach (var rental in Model.Rentals)
     {
-    <tr>
+    <tr class="clickable" onclick="location.href = '@(Url.Action("Details", "RentalManagement", new { rentalId = rental.Id }))'">
         <td>@rental.Car.LicenseNumber</td>
         <td>@rental.Customer.Name</td>
         <td>@rental.StartDate</td>
