--- a/src/WebApp/Views/ReviewManagement/Index.cshtml
+++ b/src/WebApp/Views/ReviewManagement/Index.cshtml
@@ -30,9 +30,8 @@
                 <td>@review.ReviewerName</td>
                 <td>
                     <form asp-action="Delete" asp-controller="ReviewManagement" asp-route-reviewId="@review.Id" method="post">
-                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this review?');">Delete</button>
                     </form>
-                    @* <button asp-action="Delete" asp-controller="ReviewManagement" asp-route-id="@review.Id" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this review?');">Delete</button> *@
                 </td>
             </tr>
         }
