--- a/src/WebApp/Views/RentalCarManagement/Index.cshtml
+++ b/src/WebApp/Views/RentalCarManagement/Index.cshtml
@@ -11,6 +11,7 @@
         <th>License No.</th>
         <th>Brand</th>
         <th>Type</th>
+        <th></th>
     </tr>
     </thead>
     <tbody>
@@ -20,6 +21,11 @@
         <td>@rentalCar.LicenseNumber</td>
         <td>@rentalCar.Model.Brand.Name</td>
         <td>@rentalCar.Model.Name</td>
+        <td>
+            <form asp-action="Delete" asp-controller="RentalCarManagement" asp-route-rentalCarId="@rentalCar.Id" method="post">
+                <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this rental car?');">Delete</button>
+            </form>
+        </td>
     </tr>
     }
     </tbody>
